--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,41 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Mochiy+Pop+P+One&display=swap"
+      crossorigin="anonymous"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="title"
+      property="og:title"
+      content="Website for storing favorite books and tracking the progress"
     />
+    <meta name="og:type" content="Website" />
+    <meta
+      name="description"
+      property="og:description"
+      content="React Project"
+    />
+    <meta
+      name="image"
+      property="og:image"
+      content="https://user-images.githubusercontent.com/50941074/151341345-09f7307f-3853-4ba7-a30c-5c3f0ff6b321.png"
+    />
+    <meta
+      name="keywords"
+      content="Bookstore, Book, Books"
+    />
+    <meta
+      property="og:url"
+      content="https://ewos-bookstore.netlify.app/"
+    />
+    <meta name="author" content="Evren Ersoy" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
