Add img link to meta

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <meta
       name="image"
       property="og:image"
-      content="https://user-images.githubusercontent.com/50941074/151341345-09f7307f-3853-4ba7-a30c-5c3f0ff6b321.png"
+      content="https://user-images.githubusercontent.com/84543481/151467045-8f82544c-7b24-47e9-aba6-f031f1da3fff.PNG"
     />
     <meta
       name="keywords"
